add logic for adding items

--- a/src/app/shopping-list/shopping-list.html
+++ b/src/app/shopping-list/shopping-list.html
@@ -1,42 +1,50 @@
 <div id="container">
     <h1>Lista de Compras</h1>
     
-    <form id="form">
-        <input name="itemDigitado" type="text" id="item" placeholder="Digite o nome do item">
+    <form id="form" #form="ngForm" id="form" (ngSubmit)="addItem()">
+        <input 
+            name="itemDigitado" 
+            type="text" 
+            id="item" 
+            placeholder="Digite o nome do item" 
+            [(ngModel)]="item"
+        >
         <button type="submit">Adicionar</button>
         <button type="button">Limpar Lista</button>
     </form>
 
     <table>
         <thead>
-            <tr>
-                <th class="small">#</th>
-                <th>Itens</th>
-                <th class="small"></th>
-                <th class="small"></th>
-            </tr>
+            @if (listOfItems.length) {
+                <tr>      
+                    <th class="small">#</th>
+                    <th>Itens</th>
+                    <th class="small"></th>
+                    <th class="small"></th>
+                </tr>
+            } @else {
+                <tr>
+                    <th colspan="4">Itens</th>
+                </tr>
+            }
         </thead>
         <tbody>
-            <tr>
-                <td>1</td>
-                <td>Arroz</td>
-                <td><input type="checkbox"></td>
-                <td>
-                    <button id="trash-button" aria-label="remove item">
-                        <img src="trash.png" alt="Ícone" />
-                    </button>
-                </td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>Maçã</td>
-                <td><input type="checkbox"></td>
-                <td>
-                    <button id="trash-button" aria-label="remove item">
-                        <img src="trash.png" alt="Ícone" />
-                    </button>
-                </td>
-            </tr>
+            @for(item of listOfItems; track item.id) {
+                <tr>
+                    <td>{{ item.id }}</td>
+                    <td>{{ item.name }}</td>
+                    <td><input type="checkbox"></td>
+                    <td>
+                        <button id="trash-button" aria-label="remove item">
+                            <img src="trash.png" alt="Ícone" />
+                        </button>
+                    </td>
+                </tr>
+            } @empty {
+                <tr colspan="4">
+                    <td>Nenhum item adicionado</td>                    
+                </tr> 
+            }
         </tbody>
     </table>
 </div>
