--- a/src/app/shopping-list/shopping-list.scss
+++ b/src/app/shopping-list/shopping-list.scss
@@ -82,7 +82,7 @@ $primary-light: #007bff;
             color: #fff;
         }
 
-        td.done {
+        td.checked {
             text-decoration: line-through;
         }
 
