add logic for clear list and improving add item logic

--- a/src/app/shopping-list/shopping-list.html
+++ b/src/app/shopping-list/shopping-list.html
@@ -10,7 +10,7 @@
             [(ngModel)]="item"
         >
         <button type="submit">Adicionar</button>
-        <button type="button">Limpar Lista</button>
+        <button type="button" (click)="clearList()">Limpar Lista</button>
     </form>
 
     <table>
