--- a/src/app/shopping-list/shopping-list.scss
+++ b/src/app/shopping-list/shopping-list.scss
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
     opacity: 0.97;
 }
 
@@ -10,13 +9,7 @@ $primary-dark: #0056b3;
 $primary-light: #007bff;
 
 @mixin button-base($background-color, $hover-color) {
-    cursor: pointer;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 6px;
     background-color: $background-color;
-    color: #fff;
-    font-size: 14pt;
 
     &:hover {
         background-color: $hover-color;
@@ -38,6 +31,7 @@ $primary-light: #007bff;
     h1 {
         margin-bottom: 30px;
         letter-spacing: 0.5px;
+        font-weight: 600;
         cursor: default;
     }
 
@@ -46,7 +40,7 @@ $primary-light: #007bff;
         display: flex;
         justify-content: center;
         align-items: center;
-        gap: 20px;
+        gap: 10px;
         margin-bottom: 20px;
         
         input {
